<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="?attr/backgroundColor"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="14sp"
            android:maxLines="1"
            android:text="@string/title" />

        <TextView
            android:id="@+id/textViewText"
            style="@style/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_margin="10dp"
            android:maxLines="2"
            android:text="@string/text"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewText"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOK"
                style="@style/firstButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:text="@string/ok"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNo"
                style="@style/firstButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="#00000000"
                android:text="@string/no"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>